--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Welcome to my Git Hub Website</title>
 <body>
-<h1>Welcome to my Git Hub Website</h1>
+<h1>Welcome to my Git Hub Account</h1>
 <style>
   h1{
     text-align:center;
